@@ -1,3 +1,4 @@
+* Allow drop shipment's effective date to be defined
 * Add relate from party to drop shipments
 
 Version 5.8.0 - 2020-11-02
